--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "postbuild": "node postbuild.js"
     },
     "dependencies": {
+        "bootstrap": "^4.5.2",
+        "bootstrap-vue": "^2.17.3",
         "core-js": "^3.6.5",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0"
