--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "node-sass": "^4.12.0",
         "sass-loader": "^8.0.2",
         "typescript": "~3.9.3",
+        "vue-class-component": "^7.2.6",
+        "vue-property-decorator": "^9.0.2",
         "vue-template-compiler": "^2.6.11"
     }
 }
