--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "postbuild": "node postbuild.js"
     },
     "dependencies": {
+        "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
         "bootstrap-vue": "^2.17.3",
         "core-js": "^3.6.5",
